force-app/main/default/objects/Missao__c/Missao__c.object-meta.xml
<CustomObject>
    <description>Objeto que registra os dados do cálculo da missão</description>
    <label>Missão</label>
    <nameField>
        <displayFormat>MI-{0000000}</displayFormat>
        <label>Número da Missão</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Missões</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>