force-app/main/default/objects/Missao__c/fields/Aeronave__c.field-meta.xml
<CustomField>
    <fullName>Aeronave__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Aeronave relacionada ao cálculo da missão</description>
    <inlineHelpText>Aeronave relacionada ao cálculo da missão</inlineHelpText>
    <label>Aeronave</label>
    <referenceTo>Aeronave__c</referenceTo>
    <relationshipName>Missoes</relationshipName>
    <type>Lookup</type>
</CustomField>