force-app/main/default/objects/Missao__c/fields/BaseOrigem__c.field-meta.xml
<CustomField>
    <fullName>BaseOrigem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Base de origem da aeronave do cálculo</description>
    <inlineHelpText>Base de origem da aeronave do cálculo</inlineHelpText>
    <label>Base de Origem</label>
    <referenceTo>Local__c</referenceTo>
    <relationshipName>Missoes</relationshipName>
    <type>Lookup</type>
</CustomField>