force-app/main/default/objects/Missao__c/fields/DataMissao__c.field-meta.xml
<CustomField>
    <fullName>DataMissao__c</fullName>
    <description>Data do voo</description>
    <inlineHelpText>Data do voo</inlineHelpText>
    <label>Data da Missão</label>
    <type>Date</type>
</CustomField>