force-app/main/default/objects/Missao__c/fields/DistanciaKm__c.field-meta.xml
<CustomField>
    <fullName>DistanciaKm__c</fullName>
    <description>Distância da missão em KM</description>
    <formula>(TempoCruzeiro__c /60)*(Aeronave__r.VelocidadeCruzeiro__c *1.852)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Distância da missão em KM</inlineHelpText>
    <label>Distancia (Km)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>