force-app/main/default/objects/Missao__c/fields/HorarioMaximoDecolagem__c.field-meta.xml
<CustomField>
    <fullName>HorarioMaximoDecolagem__c</fullName>
    <description>Horário máximo para executar o voo em tempo hábil</description>
    <inlineHelpText>Horário máximo para executar o voo em tempo hábil</inlineHelpText>
    <label>Horário Máximo de Decolagem</label>
    <type>DateTime</type>
</CustomField>