force-app/main/default/objects/Missao__c/fields/PayloadArredondado__c.field-meta.xml
<CustomField>
    <fullName>PayloadArredondado__c</fullName>
    <description>Payload arredondado para baixo</description>
    <formula>FLOOR(PesoMaximo__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Payload arredondado para baixo</inlineHelpText>
    <label>Payload Arredondado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>