force-app/main/default/objects/Missao__c/fields/PesoMaximo__c.field-meta.xml
<CustomField>
    <fullName>PesoMaximo__c</fullName>
    <description>Peso máximo disponível</description>
    <inlineHelpText>Peso máximo disponível</inlineHelpText>
    <label>Peso Máximo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>