force-app/main/default/objects/Missao__c/fields/RotaSolicitada__c.field-meta.xml
<CustomField>
    <fullName>RotaSolicitada__c</fullName>
    <label>Rota Solicitada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>