force-app/main/default/objects/Missao__c/fields/TempoCruzeiro__c.field-meta.xml
<CustomField>
    <fullName>TempoCruzeiro__c</fullName>
    <description>Tempo de voo em velocidade de cruzeiro</description>
    <inlineHelpText>Tempo de voo em velocidade de cruzeiro</inlineHelpText>
    <label>Tempo Cruzeiro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>