force-app/main/default/objects/Missao__c/fields/TempoMissao__c.field-meta.xml
<CustomField>
    <fullName>TempoMissao__c</fullName>
    <description>Tempo total a missão</description>
    <inlineHelpText>Tempo total a missão</inlineHelpText>
    <label>Tempo da Missão</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>