force-app/main/default/objects/Missao__c/fields/TempoSolo__c.field-meta.xml
<CustomField>
    <fullName>TempoSolo__c</fullName>
    <description>Tempo em solo</description>
    <inlineHelpText>Tempo em solo</inlineHelpText>
    <label>Tempo em Solo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>