force-app/main/default/objects/Missao__c/fields/TempoTransladoIda__c.field-meta.xml
<CustomField>
    <fullName>TempoTransladoIda__c</fullName>
    <description>Tempo de duração do traslado de ida</description>
    <inlineHelpText>Tempo de duração do traslado de ida</inlineHelpText>
    <label>Tempo Translado Ida</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>