force-app/main/default/objects/Missao__c/fields/TempoTransladoRetorno__c.field-meta.xml
<CustomField>
    <fullName>TempoTransladoRetorno__c</fullName>
    <description>Tempo de duração do translado de retorno</description>
    <inlineHelpText>Tempo de duração do translado de retorno</inlineHelpText>
    <label>Tempo Translado Retorno</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>