force-app/main/default/objects/Missao__c/fields/Viabilidade__c.field-meta.xml
<CustomField>
    <fullName>Viabilidade__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Viabilidade da missão</description>
    <inlineHelpText>Viabilidade da missão</inlineHelpText>
    <label>Viabilidade</label>
    <type>Checkbox</type>
</CustomField>