force-app/main/default/objects/Missao__c/fields/Voo__c.field-meta.xml
<CustomField>
    <fullName>Voo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Voo ao qual o objeto Missão esta vinculado</description>
    <inlineHelpText>Voo ao qual o objeto Missão esta vinculado</inlineHelpText>
    <label>Voo</label>
    <referenceTo>Voo__c</referenceTo>
    <relationshipName>Missoes</relationshipName>
    <type>Lookup</type>
</CustomField>