force-app/main/default/objects/Missao__c/validationRules/TempoMissaoTemQueSerMaiorZero.validationRule-meta.xml
<ValidationRule>
    <fullName>TempoMissaoTemQueSerMaiorZero</fullName>
    <active>true</active>
    <description>Tempo de missão não pode ser vazio nem menor ou igual a zero</description>
    <errorConditionFormula>isNull(TempoMissao__c) || TempoMissao__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>TempoMissao__c</errorDisplayField>
    <errorMessage>Tempo de missão não pode ser vazio nem menor ou igual a zero</errorMessage>
</ValidationRule>