force-app/main/default/objects/Missao__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Aeronave__c</columns>
    <columns>DataMissao__c</columns>
    <columns>RotaSolicitada__c</columns>
    <columns>PesoMaximo__c</columns>
    <columns>TempoMissao__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>